    configured size with GTK3.
* Apply partial workaround for GTK3 tooltip positioning bug. (MAGEIA#30574)
* Calculate _NET_WM_STRUT_PARTIAL with respect of HiDPI scale factor when built
    with GTK3.
* batt: Fix division by zero with broken batteries. (SF#908)
* netstatus: Made netstatus_icon_set_tooltips_enabled() work.
* launchtaskbar: Add missing tooltips in the plugin settings.
* volumealsa: Fix scrolling does not work properly when built with GTK3.
* xkb: Fix parsing the keyboard layout configuration.
* xkb: Fix problem with unexpectedly truncated localized strings.

0.10.1
-------------------------------------------------------------------------
* Fixed battery alarm when measurement of current is missing.
* Fixed spelling errors on "allow to" in plugins descriptions, and "GTK2+" to
    more correct "GTK+".
* Fixed battery indication when charge_full and energy_full are not available.
* Corrected scaling of volume plugin for HiDPI monitors.
* Fixed connection name dropdown list in netstatus plugin.

0.10.0
-------------------------------------------------------------------------
* Fixed delayed application of font cnahges on dclock and weather plugins.
* Allowed switching workplaces by scrolling over the pager.
* Added new API: lxpanel_draw_label_text_with_color().
* Fixed not-applicable font setting on thermal plugin.
* Fixed crash on right-click task button after some task was killed using menu
    on another task button.
* Fixed crash after color was removed from monitor plugin configuration.
* Aligned used memory calculation in lxpanel monitor with 'free' command line
    utility.
* Added possibility to use few weather providers for weather widget.
* Disabled Yahoo! Weather because they removed free API support.
* Added OpenWeatherMap weather provider.
* Fixed wrong application position on taskbar in multihead configuration.
* Fixed battery color (must be green) when battery is fully charged.
* Fixed crash at task plugin when all windows lose focus.